--- a/public/sdpl-assets/css/custom_style.css
+++ b/public/sdpl-assets/css/custom_style.css
@@ -128,4 +128,23 @@ label {
     padding: 15px 0.5rem;
 }
 
+.float{
+    padding: 8px 10px 8px 10px ;
+	position:fixed;
+	/* width:60px;
+	height:60px; */
+	bottom:80px;
+	right:5px;
+	/* background-color:#426bc5; */
+	background-color:#fff;
+	color:#426bc5;
+	text-align:center;
+	/* box-shadow: 2px 2px 3px #999; */
+    border-radius: 30px 0px 30px 0px;
+	box-shadow: 10px 0px 120px 0px #000;
+    z-index: 9999;
+}
+
+
+
 
