--- a/public/sdpl-assets/user/css/style.css
+++ b/public/sdpl-assets/user/css/style.css
@@ -1,6 +1,7 @@
 .hide{
   display: none;
 }
+
 .col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
   position: relative;
   width: 100%;
@@ -67,11 +68,20 @@
   font-size: 14px;
 }
 
-.form-check-label {
+/* .form-check-label {
+  font-family: sans-serif;
+  font-size: 14px;
+} */
+
+.list-group{
   font-family: sans-serif;
   font-size: 14px;
 }
 
+.list-group-item{
+  font-family: sans-serif;
+  font-size: 14px;
+}
 
 .nav-link {
   display: block;
@@ -150,6 +160,89 @@
   background-image: linear-gradient(to right, #FFFFFF , rgba(241, 236, 219, 0.986));
 }
 
+
+.gradiantclass{
+  background-image: linear-gradient(to right, #85c6e4 , rgba(231, 245, 250, 0.986));
+}
+
 .rounded {
   border-radius: 2.25rem!important;
 }
+
+.built{
+  font-family: sans-serif;
+  font-size: 14px;
+}
+
+.input-group-text{
+  height: 23px;
+  width: auto;
+  line-height: initial;
+  font-size: 14px;
+  font-family: sans-serif;
+}
+
+.show_cursor{
+  cursor: pointer;
+}
+
+.linkSpanner{
+  position:absolute; 
+  width:100%;
+  height:100%;
+  top:0;
+  left: 0;
+  z-index: 1;
+
+}   
+
+.contain {
+  position:relative;
+}
+
+.spanner{
+  position:absolute; 
+  width:100%;
+  height:100%;
+  top:0;
+  left: 0;
+  z-index: 1;
+
+}   
+
+.conta {
+  position:relative;
+}
+
+.spain{
+  position:absolute; 
+  width:100%;
+  height:100%;
+  top:0;
+  left: 0;
+  z-index: 1;
+
+}   
+
+.exsting_pro {
+  position:relative;
+}
+
+.projecttypespanner{
+  position:absolute; 
+  width:100%;
+  height:100%;
+  top:0;
+  left: 0;
+  z-index: 1;
+
+}   
+
+.project_card {
+  position:relative;
+}
+
+/* .built{
+  background-image: linear-gradient(to right, hsl(0, 0%, 100%) , rgb(227, 240, 245));
+} */
+
